<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="project_url">https://github.com/edsonduarte1990/reminders</string>
    <string name="app_copyright">Copyright (C) 2014 Edson Duarte</string>
    <string name="icon_copyright">Icon\'s Copyright (C) 2014 Filipe Marques</string>
    <string name="app_license">GPLv3+ licensed.</string>
    <string name="app_name">Reminders</string>
    <string name="app_version">v0.8.4</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback/Help</string>
    <string name="action_about">About</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="file_success">Successfully atached log.</string>
    <string name="file_error">Device does not have memory stick, log can not be atached.</string>
    <string name="tag_scheduled">scheduled</string>
    <string name="tag_update">update</string>
    <string name="tag_remind">remind</string>
    <string name="tag_class">com.lostrealm.lembretes.</string>
    <string name="limeira_warning">Lembretes podem não funcionar corretamente para Limeira.</string> <!-- text in portuguese because it is displayed with the restaurant\'s menu. -->


    <!-- Errors -->
    <string name="update_warning">Couldn\'t update.</string>
    <string name="error">Unknown error, please enable logs and if this occurs again, send logs to developer.</string>
    <string name="downloading_error">No internet connection.</string>
    <string name="server_error">Server is offline.</string>
    <string name="not_found_error">Cardápio não está disponível no momento.</string> <!-- text in portuguese because it is displayed with the restaurant\'s menu. -->


    <!-- MainActivity -->
    <string name="main_activity_label"><b>Next Meal:</b></string>
    <string name="main_activity_view">Dowloanding Menu!</string>
    <string name="main_activity_update_view">0</string>
    <string name="main_activity_note">Updating...</string>
    <string name="main_activity_chooser">Send email with:</string>

    <!-- SettingsActivity -->
    <string name="settings_activity_label">Settings</string>
    <string name="settings_activity_toast">Adjust reminder\'s time.</string>
    <string name="category_restaurant">Restaurant</string>
    <string name="category_reminders">Reminders</string>
    <string name="category_proxy">Proxy server</string>
    <string name="category_logging">Logging</string>
    <string name="pref_remind_title">Allow Reminders</string>
    <string name="pref_remind_summary_on">Reminders activated.</string>
    <string name="pref_remind_summary_off">Reminders not active.</string>
    <string name="pref_menu_title">Vegetarian Menu</string>
    <string name="pref_menu_summary_on">If available, app displays vegetarian food.</string>
    <string name="pref_menu_summary_off">Not showing vegetarian food.</string>
    <string name="pref_vibrate_title">Vibrate on Notifications</string>
    <string name="pref_vibrate_summary_on">Vibration activated.</string>
    <string name="pref_vibrate_summary_off">Vibration off.</string>
    <string name="pref_sound_title">Sounds on Notifications</string>
    <string name="pref_sound_summary_on">Sounds activated.</string>
    <string name="pref_sound_summary_off">Sounds off.</string>
    <string name="pref_restaurant_title">Select Restaurant</string>
    <string name="pref_restaurant_summary">Select from which restaurant the menu should be displayed.</string>
    <string name="pref_restaurant_default">CAM</string>
    <string name="pref_restaurant_CAM">https://www1.sistemas.unicamp.br/Mobile/CardapioPrefeituraCampinas</string>
    <string name="pref_restaurant_FCA">https://www1.sistemas.unicamp.br/Mobile/CardapioFCA</string>
    <string name="pref_restaurant_PFL">https://www1.sistemas.unicamp.br/Mobile/CardapioPFL</string>

    <string-array name="pref_restaurant_entries">
        <item>COTUCA, RU, RA, RS</item>
        <item>COTIL, FCA, FOP, FT</item>
        <item>PFL</item>
    </string-array>
    <string-array name="pref_restaurant_values">
        <item>CAM</item>
        <item>FCA</item>
        <item>PFL</item>
    </string-array>

    <string name="pref_reminder_type_title">Reminder\'s Type</string>
    <string name="pref_reminder_type_summary">Select your preferred type of reminders.</string>
    <string name="pref_reminder_type_default">refeicao</string>

    <string-array name="pref_reminder_type_entries">
        <item>By Meal</item>
        <item>By Words</item>
    </string-array>
    <string-array name="pref_reminder_type_values">
        <item>refeicao</item>
        <item>palavra</item>
    </string-array>

    <string name="pref_reminder_time_lunch_title">Lunch\'s Reminder\'s Time</string>
    <string name="pref_reminder_time_dinner_title">Dinner\'s Reminder\'s Time</string>
    <string name="pref_words_title">List of Words</string>
    <string name="pref_words_summary">Words used on remindes, separated by spaces.</string>
    <string name="pref_orbot_title">Use Orbot proxy settings</string>
    <string name="pref_orbot_summary_on">Proxy settings set to work with Orbot.</string>
    <string name="pref_orbot_summary_off">Not using Orbot settings.</string>
    <string name="pref_host_title">Proxy Address</string>
    <string name="pref_host_summary">HTTP Proxy Server\'s IP or hostname.</string>
    <string name="pref_port_title">Proxy port</string>
    <string name="pref_port_summary">HTTP Proxy Server\'s port.</string>
    <string name="pref_logging_title">Activate Logs</string>
    <string name="pref_logging_summary_on">Logs activated. You can send it to the developer using the feedback option.</string>
    <string name="pref_logging_summary_off">Logs deactivated.</string>
    <string name="pref_logging_view_title">Show logs</string>
    <string name="pref_logging_view_summary">Logs will be show in new screen.</string>

    <!-- AboutActivity -->
    <string name="about_activity_title">About</string>
    <string name="about_activity_content_description">Project\'s Icon</string>
    <string name="about_activity_button_text">Project\'s Page</string>
    <string name="about_activity_button_action">Open Page</string>

    <!-- LogActivity -->
    <string name="log_activity_title">Logs</string>
    <string name="log_activity_button">Erase Logs</string>
    <string name="log_not_found">It was not possible to load logs.</string>
    <string name="title_activity_meal">MealActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>