<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lembretes="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        lembretes:showAsAction="always"/>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:orderInCategory="101"
        android:title="@string/action_about"
        lembretes:showAsAction="always"/>
    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/ic_action_help"
        android:orderInCategory="102"
        android:title="@string/action_feedback"
        lembretes:showAsAction="never"/>

</menu>